# cmake-cpp-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  run.sh
include/: printer.h
include/logger/: logger.hpp
src/: printer.cpp
test_examples/: json_example.json
